tests/artifacts/perf/2026-06-13-linalg-8l8r1-96/proof_flat_lu_golden_digest_rch.txt
  [2m2026-06-13T04:18:35.718736Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mSelected worker: vmi1149989 at root@212.90.121.76 (3 slots remaining after reservation, speed 50.0)[0m
    [2;3mat[0m rch/src/hook.rs:514 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:36.098420Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mStarting remote compilation pipeline for frankenscipy (hash: 79896f4b691558cb)[0m
    [2;3mat[0m rch/src/hook.rs:5994 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:36.098522Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mPrepared dependency sync manifest for 20 roots[0m
    [2;3mat[0m rch/src/hook.rs:6016 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:37.941677Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mSyncing project to worker vmi1149989...[0m
    [2;3mat[0m rch/src/hook.rs:6046 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:37.941789Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy -> /data/projects/frankenscipy on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:42.138336Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 4196ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:42.138489Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-arrayapi -> /data/projects/frankenscipy/crates/fsci-arrayapi on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:43.987396Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 1848ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:43.987552Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-cluster -> /data/projects/frankenscipy/crates/fsci-cluster on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:45.843482Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 1855ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:45.843641Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-conformance -> /data/projects/frankenscipy/crates/fsci-conformance on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:49.297884Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 3454ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:49.298094Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-constants -> /data/projects/frankenscipy/crates/fsci-constants on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:51.123577Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 1825ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:51.123737Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-datasets -> /data/projects/frankenscipy/crates/fsci-datasets on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:52.967421Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 1843ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:52.967577Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-fft -> /data/projects/frankenscipy/crates/fsci-fft on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:54.814868Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 1847ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:54.815061Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-integrate -> /data/projects/frankenscipy/crates/fsci-integrate on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:56.644907Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 1829ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:56.645060Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-interpolate -> /data/projects/frankenscipy/crates/fsci-interpolate on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:58.490613Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 1845ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:18:58.490782Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-io -> /data/projects/frankenscipy/crates/fsci-io on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:00.290089Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 1799ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:00.290216Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-linalg -> /data/projects/frankenscipy/crates/fsci-linalg on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:02.297551Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 2007ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:02.297699Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-ndimage -> /data/projects/frankenscipy/crates/fsci-ndimage on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:04.076922Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 1779ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:04.077095Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-odr -> /data/projects/frankenscipy/crates/fsci-odr on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:05.912178Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 1835ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:05.912378Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-opt -> /data/projects/frankenscipy/crates/fsci-opt on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:07.740100Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 1827ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:07.740269Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-runtime -> /data/projects/frankenscipy/crates/fsci-runtime on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:09.609791Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 1869ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:09.609942Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-signal -> /data/projects/frankenscipy/crates/fsci-signal on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:11.470503Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 1860ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:11.470657Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-sparse -> /data/projects/frankenscipy/crates/fsci-sparse on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:13.275751Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 1805ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:13.275870Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-spatial -> /data/projects/frankenscipy/crates/fsci-spatial on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:15.068761Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 1792ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:15.068918Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-special -> /data/projects/frankenscipy/crates/fsci-special on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:16.864621Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 1795ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:16.864776Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSyncing /data/projects/frankenscipy/crates/fsci-stats -> /data/projects/frankenscipy/crates/fsci-stats on vmi1149989[0m
    [2;3mat[0m rch/src/transfer.rs:1434 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:18.856247Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mSync completed in 1991ms[0m
    [2;3mat[0m rch/src/transfer.rs:1503 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:18.856304Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mSync complete: 26717 files, 957205 bytes in 40901ms[0m
    [2;3mat[0m rch/src/hook.rs:6209 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:53.488478Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mExecuting command remotely: cargo test -j 1 -p fsci-linalg --release --lib flat_lu_golden_digest -- --ignored --nocapture[0m
    [2;3mat[0m rch/src/hook.rs:6252 [2;3mon[0m ThreadId(1)

  [2m2026-06-13T04:19:53.488538Z[0m [32m INFO[0m [1;32mrch::transfer[0m[32m: [32mRewriting CARGO_TARGET_DIR for remote execution (worker-scoped path): /data/tmp/cargo-target -> /data/projects/frankenscipy/.rch-target-vmi1149989-job-29884606035526976-1781324317941670307-0[0m
    [2;3mat[0m rch/src/transfer.rs:712 [2;3mon[0m ThreadId(1)

    Updating crates.io index
 Downloading crates ...
  Downloaded alloca v0.4.0
  Downloaded approx v0.5.1
  Downloaded bit-set v0.8.0
  Downloaded arrayref v0.3.9
  Downloaded anes v0.1.6
  Downloaded autocfg v1.5.0
  Downloaded fnv v1.0.7
  Downloaded equivalent v1.0.2
  Downloaded anstyle v1.0.14
  Downloaded arrayvec v0.7.6
  Downloaded clap_lex v1.1.0
  Downloaded aho-corasick v1.1.4
  Downloaded clap v4.6.1
  Downloaded find-msvc-tools v0.1.9
  Downloaded tempfile v3.27.0
  Downloaded rawpointer v0.2.1
  Downloaded cpufeatures v0.3.0
  Downloaded blake3 v1.8.4
  Downloaded clap_builder v4.6.0
  Downloaded simba v0.9.1
  Downloaded errno v0.3.14
  Downloaded page_size v0.6.0
  Downloaded itoa v1.0.18
  Downloaded nalgebra-macros v0.3.0
  Downloaded paste v1.0.15
  Downloaded unicode-ident v1.0.24
  Downloaded bit-vec v0.8.0
  Downloaded num-complex v0.4.6
  Downloaded rand_core v0.9.5
  Downloaded unarray v0.1.4
  Downloaded memchr v2.8.0
  Downloaded plotters-svg v0.3.7
  Downloaded cast v0.3.0
  Downloaded either v1.15.0
  Downloaded rand_xorshift v0.4.0
  Downloaded wait-timeout v0.2.1
  Downloaded plotters-backend v0.3.7
  Downloaded oorandom v11.1.5
  Downloaded crossbeam-epoch v0.9.18
  Downloaded ciborium-ll v0.2.2
  Downloaded cfg-if v1.0.4
  Downloaded same-file v1.0.6
  Downloaded ciborium-io v0.2.2
  Downloaded fastrand v2.4.1
  Downloaded ppv-lite86 v0.2.21
  Downloaded shlex v1.3.0
  Downloaded tinytemplate v1.2.1
  Downloaded walkdir v2.5.0
  Downloaded zmij v1.0.21
  Downloaded crossbeam-deque v0.8.6
  Downloaded num-integer v0.1.46
  Downloaded num-traits v0.2.19
  Downloaded quick-error v1.2.3
  Downloaded rand_chacha v0.9.0
  Downloaded constant_time_eq v0.4.2
  Downloaded num-rational v0.4.2
  Downloaded getrandom v0.3.4
  Downloaded matrixmultiply v0.3.10
  Downloaded quote v1.0.45
  Downloaded once_cell v1.21.4
  Downloaded crossbeam-utils v0.8.21
  Downloaded bitflags v2.11.1
  Downloaded ciborium v0.2.2
  Downloaded criterion-plot v0.8.2
  Downloaded serde_core v1.0.228
  Downloaded serde_derive v1.0.228
  Downloaded bytemuck v1.25.0
  Downloaded half v2.7.1
  Downloaded rusty-fork v0.3.1
  Downloaded proc-macro2 v1.0.106
  Downloaded safe_arch v0.7.4
  Downloaded rayon-core v1.13.0
  Downloaded cc v1.2.60
  Downloaded serde v1.0.228
  Downloaded rand v0.9.4
  Downloaded indexmap v2.14.0
  Downloaded zerocopy-derive v0.8.48
  Downloaded criterion v0.8.2
  Downloaded num-bigint v0.4.6
  Downloaded glam v0.18.0
  Downloaded plotters v0.3.7
  Downloaded glam v0.14.0
  Downloaded itertools v0.13.0
  Downloaded regex v1.12.3
  Downloaded wide v0.7.33
  Downloaded serde_json v1.0.149
  Downloaded typenum v1.20.0
  Downloaded glam v0.15.2
  Downloaded glam v0.16.0
  Downloaded glam v0.19.0
  Downloaded glam v0.17.3
  Downloaded hashbrown v0.17.0
  Downloaded glam v0.20.5
  Downloaded rayon v1.12.0
  Downloaded proptest v1.11.0
  Downloaded glam v0.22.0
  Downloaded glam v0.23.0
  Downloaded glam v0.21.3
  Downloaded glam v0.24.2
  Downloaded regex-syntax v0.8.10
  Downloaded glam v0.25.0
  Downloaded glam v0.27.0
  Downloaded nalgebra v0.34.2
  Downloaded glam v0.28.0
  Downloaded rustix v1.1.4
  Downloaded syn v2.0.117
  Downloaded zerocopy v0.8.48
  Downloaded glam v0.29.3
  Downloaded regex-automata v0.4.14
  Downloaded libc v0.2.185
  Downloaded glam v0.31.1
  Downloaded glam v0.30.10
  Downloaded glam v0.32.1
  Downloaded linux-raw-sys v0.12.1
   Compiling proc-macro2 v1.0.106
   Compiling quote v1.0.45
   Compiling unicode-ident v1.0.24
   Compiling syn v2.0.117
   Compiling cfg-if v1.0.4
   Compiling autocfg v1.5.0
   Compiling libc v0.2.185
   Compiling num-traits v0.2.19
   Compiling find-msvc-tools v0.1.9
   Compiling shlex v1.3.0
   Compiling cc v1.2.60
   Compiling getrandom v0.3.4
   Compiling zerocopy v0.8.48
   Compiling serde_core v1.0.228
   Compiling zerocopy-derive v0.8.48
   Compiling crossbeam-utils v0.8.21
   Compiling serde v1.0.228
   Compiling zmij v1.0.21
   Compiling serde_derive v1.0.228
   Compiling equivalent v1.0.2
   Compiling serde_json v1.0.149
   Compiling hashbrown v0.17.0
   Compiling indexmap v2.14.0
   Compiling itoa v1.0.18
   Compiling rustix v1.1.4
   Compiling memchr v2.8.0
   Compiling crossbeam-epoch v0.9.18
   Compiling rand_core v0.9.5
   Compiling blake3 v1.8.4
   Compiling bytemuck v1.25.0
   Compiling paste v1.0.15
   Compiling bitflags v2.11.1
   Compiling either v1.15.0
   Compiling linux-raw-sys v0.12.1
   Compiling regex-syntax v0.8.10
   Compiling rayon-core v1.13.0
   Compiling safe_arch v0.7.4
   Compiling crossbeam-deque v0.8.6
   Compiling half v2.7.1
   Compiling alloca v0.4.0
   Compiling matrixmultiply v0.3.10
   Compiling clap_lex v1.1.0
   Compiling anstyle v1.0.14
   Compiling plotters-backend v0.3.7
   Compiling fastrand v2.4.1
   Compiling arrayref v0.3.9
   Compiling arrayvec v0.7.6
   Compiling constant_time_eq v0.4.2
   Compiling cpufeatures v0.3.0
   Compiling ciborium-io v0.2.2
   Compiling once_cell v1.21.4
   Compiling tempfile v3.27.0
   Compiling ciborium-ll v0.2.2
   Compiling plotters-svg v0.3.7
   Compiling clap_builder v4.6.0
   Compiling wide v0.7.33
   Compiling regex-automata v0.4.14
   Compiling itertools v0.13.0
   Compiling ppv-lite86 v0.2.21
   Compiling approx v0.5.1
   Compiling num-complex v0.4.6
   Compiling num-integer v0.1.46
   Compiling wait-timeout v0.2.1
   Compiling quick-error v1.2.3
   Compiling cast v0.3.0
   Compiling bit-vec v0.8.0
   Compiling fnv v1.0.7
   Compiling same-file v1.0.6
   Compiling rawpointer v0.2.1
   Compiling walkdir v2.5.0
   Compiling rusty-fork v0.3.1
   Compiling bit-set v0.8.0
   Compiling criterion-plot v0.8.2
   Compiling num-rational v0.4.2
   Compiling simba v0.9.1
   Compiling rand_chacha v0.9.0
   Compiling regex v1.12.3
   Compiling rayon v1.12.0
   Compiling clap v4.6.1
   Compiling plotters v0.3.7
   Compiling fsci-runtime v0.1.0 (/data/projects/frankenscipy/crates/fsci-runtime)
   Compiling ciborium v0.2.2
   Compiling rand_xorshift v0.4.0
   Compiling rand v0.9.4
   Compiling tinytemplate v1.2.1
   Compiling page_size v0.6.0
   Compiling nalgebra-macros v0.3.0
   Compiling oorandom v11.1.5
   Compiling unarray v0.1.4
   Compiling anes v0.1.6
   Compiling typenum v1.20.0
   Compiling nalgebra v0.34.2
   Compiling criterion v0.8.2
   Compiling proptest v1.11.0
   Compiling fsci-fft v0.1.0 (/data/projects/frankenscipy/crates/fsci-fft)
   Compiling fsci-linalg v0.1.0 (/data/projects/frankenscipy/crates/fsci-linalg)
error[E0425]: cannot find value `FLAT_LU_INV_MIN_DIM` in this scope
    --> crates/fsci-linalg/src/lib.rs:9345:27
     |
9345 |     let inverse = if n >= FLAT_LU_INV_MIN_DIM {
     |                           ^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LuFactorsFlat` in this scope
     --> crates/fsci-linalg/src/lib.rs:12514:51
      |
  471 | pub struct LuFactorResult {
      | ------------------------- similarly named struct `LuFactorResult` defined here
...
12514 | fn lu_factor_blocked(a_in: &[Vec<f64>]) -> Option<LuFactorsFlat> {
      |                                                   ^^^^^^^^^^^^^
      |
help: a struct with a similar name exists
      |
12514 - fn lu_factor_blocked(a_in: &[Vec<f64>]) -> Option<LuFactorsFlat> {
12514 + fn lu_factor_blocked(a_in: &[Vec<f64>]) -> Option<LuFactorResult> {
      |
help: you might be missing a type parameter
      |
12514 | fn lu_factor_blocked<LuFactorsFlat>(a_in: &[Vec<f64>]) -> Option<LuFactorsFlat> {
      |                     +++++++++++++++

error[E0422]: cannot find struct, variant or union type `LuFactorsFlat` in this scope
     --> crates/fsci-linalg/src/lib.rs:12636:10
      |
  471 | pub struct LuFactorResult {
      | ------------------------- similarly named struct `LuFactorResult` defined here
...
12636 |     Some(LuFactorsFlat { n, data, perm })
      |          ^^^^^^^^^^^^^
      |
help: a struct with a similar name exists
      |
12636 -     Some(LuFactorsFlat { n, data, perm })
12636 +     Some(LuFactorResult { n, data, perm })
      |

error[E0425]: cannot find type `LuFactorsFlat` in this scope
     --> crates/fsci-linalg/src/lib.rs:12643:32
      |
  471 | pub struct LuFactorResult {
      | ------------------------- similarly named struct `LuFactorResult` defined here
...
12643 | fn lu_subst_factored(factors: &LuFactorsFlat, mut y: Vec<f64>) -> Option<Vec<f64>> {
      |                                ^^^^^^^^^^^^^
      |
help: a struct with a similar name exists
      |
12643 - fn lu_subst_factored(factors: &LuFactorsFlat, mut y: Vec<f64>) -> Option<Vec<f64>> {
12643 + fn lu_subst_factored(factors: &LuFactorResult, mut y: Vec<f64>) -> Option<Vec<f64>> {
      |

error[E0425]: cannot find value `FLAT_LU_DET_MIN_DIM` in this scope
     --> crates/fsci-linalg/src/lib.rs:12678:21
      |
12678 |     if a_in.len() < FLAT_LU_DET_MIN_DIM || a_in.iter().flatten().any(|value| !value.is_finite()) {
      |                     ^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `FLAT_LU_DET_MIN_DIM` in this scope
     --> crates/fsci-linalg/src/lib.rs:13364:17
      |
13364 |         let n = FLAT_LU_DET_MIN_DIM;
      |                 ^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `permutation_parity_is_odd` in this scope
     --> crates/fsci-linalg/src/lib.rs:12686:30
      |
12686 |     let mut determinant = if permutation_parity_is_odd(&factors.perm)? {
      |                              ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `permutation_parity_is_odd` in this scope
     --> crates/fsci-linalg/src/lib.rs:13299:20
      |
13299 |         assert_eq!(permutation_parity_is_odd(&[0, 1, 2]), Some(false));
      |                    ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `permutation_parity_is_odd` in this scope
     --> crates/fsci-linalg/src/lib.rs:13300:20
      |
13300 |         assert_eq!(permutation_parity_is_odd(&[1, 0, 2]), Some(true));
      |                    ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `permutation_parity_is_odd` in this scope
     --> crates/fsci-linalg/src/lib.rs:13301:20
      |
13301 |         assert_eq!(permutation_parity_is_odd(&[2, 1, 0]), Some(true));
      |                    ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `permutation_parity_is_odd` in this scope
     --> crates/fsci-linalg/src/lib.rs:13302:20
      |
13302 |         assert_eq!(permutation_parity_is_odd(&[1, 2, 0]), Some(false));
      |                    ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `permutation_parity_is_odd` in this scope
     --> crates/fsci-linalg/src/lib.rs:13303:20
      |
13303 |         assert_eq!(permutation_parity_is_odd(&[1, 1, 0]), None);
      |                    ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

Some errors have detailed explanations: E0422, E0425.
For more information about an error, try `rustc --explain E0422`.
error: could not compile `fsci-linalg` (lib test) due to 12 previous errors
  [2m2026-06-13T04:22:27.333464Z[0m [32m INFO[0m [1;32mrch::hook[0m[32m: [32mRemote command finished: exit=101 in 153844ms[0m
    [2;3mat[0m rch/src/hook.rs:6376 [2;3mon[0m ThreadId(1)

[RCH] remote vmi1149989 failed (exit 101)
